# BrnoData_Chatbot

./: .env  .env.example  .gitignore  README.md  docker-compose.local.yml  pyproject.toml
agent/: agent.py
agent/brno_llm/: agent.py
api/: main.py  models.py
api/app/: main.py  models.py
api/app/core/: config.py  db.py
api/app/routers/: sessions.py
api/app/services/: service.py  session_service.py
api/core/: config.py  db.py
api/routers/: auth.py  chat.py  sessions.py
api/schemas/: chat.py  sessions.py  users.py
api/services/: service.py  session_service.py  user_service.py
compose/local/agent/: Dockerfile
compose/local/api/: Dockerfile
frontend/: package-lock.json  vite.config.ts
frontend/src/: AiChat.tsx  App.tsx  Auth.tsx  PrivateRoute.tsx
frontend/src/components/: ChatMessages.tsx  ChatSidebar.tsx  ConversationList.tsx  UserInfo.tsx
frontend/src/css/: auth.css  chat.css
frontend/src/hooks/: UseChat.ts  UseUser.ts
frontend/src/services/: api.ts
frontend/src/types/: chat.ts
migrations/: env.py
migrations/versions/: 50133612f0f9_add_users_table.py
